cfp/main.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');

* {
    box-sizing: border-box;
    margin: 0;
}

html, body {
    font-family: 'Open Sans', 'sans-serif', 'Noto Sans CJK Tc Light','Microsoft JhengHei';
    font-size: 20px;
    font-weight: lighter;
    color: #383838;
    margin: 0;
}


h1 {
    font-size: 48px;
    text-shadow: 0px 0px 5px white,0px 0px 5px white,0px 0px 5px white,0px 0px 5px white,0px 0px 5px white,0px 0px 5px white,0px 0px 5px white;
}

h2 {
    font-size: 32px;
    font-family: 'Noto Sans CJK Tc Regular','Microsoft JhengHei';
    font-weight: bold;
    color: #009e96;
}

h3 {
    font-size: 26px;
    margin-top: 1.6em;
    font-family: 'Noto Sans CJK Tc Regular','Microsoft JhengHei';
    font-weight: bold;
    color: #383838;
}

@media screen and (max-width: 900px) {
    html, body {
        font-size: 22px;
    }
    h2 {
        font-size: 32px;
    }
    h3 {
        font-size: 28px;
    }
    #welcome {
        font-size: 18px;
    }
    main > article {
        margin-top: 40px !important;
    }
    footer {
        margin-top: 20px !important;
    }
    header > .main {
        background-image: url('main_mobile.png') !important;
        background-size: auto 80%;
    }
    #banner{
        display: none;
    }
    .button {
        width: 150px !important;
        padding: 15px !important;
        font-size: 28px !important;
    }
}

@media screen and (max-width: 768px) {
    html, body {
        font-size: 20px;
    }
    #welcome {
        font-size: 16px;
    }
    main > article {
        margin-top: 20px !important;
        padding: .3em 15px 1em 15px !important;
    }
    footer {
        margin-top: 10px !important;
        font-size: 16px;
    }
    h2 {
        font-size: 28px;
    }
    h3 {
        font-size: 24px;
    }
    p {
        font-size: 18px;
        letter-spacing: 1px !important;
    }
}

@media screen and (max-width: 350px) {
    html, body {
        font-size: 20px;
    }
    #welcome {
        font-size: 16px;
    }
    main > article {
        margin-top: 20px !important;
        padding: .3em 15px 1em 15px !important;
    }
    footer {
        margin-top: 10px !important;
        font-size: 16px;
    }
    h2 {
        font-size: 28px;
    }
    h3 {
        font-size: 24px;
    }
    p {
        font-size: 18px;
        letter-spacing: 1px !important;
    }
}

ul,li {
    margin-left: .5em; padding-left: 0;
    margin-top: 1em;
}
p {
    text-align: justify;
    line-height: 1.6em;
    letter-spacing: 2px;
    margin-top: 1em;
}

header {
    width: 100%;
    height: 100vh;
    font-size: 0px;
    text-align: center;
}

header > .side {
    display: inline-block;
    vertical-align: top;
    width: 4%;
    height: 100vh;
    background : -moz-radial-gradient(50% 50%, circle farthest-corner, rgba(44, 166, 224, 1) 0%, rgba(0, 161, 153, 1) 100%);
    background : -webkit-radial-gradient(50% 50%, circle farthest-corner, rgba(44, 166, 224, 1) 0%, rgba(0, 161, 153, 1) 100%);
    background : -webkit-gradient(radial,50% 50% ,0 , 50% 50%, 382.36 ,color-stop(0,rgba(44, 166, 224, 1) ),color-stop(1,rgba(0, 161, 153, 1) ));
    background : -o-radial-gradient(50% 50%, circle farthest-corner, rgba(44, 166, 224, 1) 0%, rgba(0, 161, 153, 1) 100%);
    background : -ms-radial-gradient(50% 50%, circle farthest-corner, rgba(44, 166, 224, 1) 0%, rgba(0, 161, 153, 1) 100%);
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Stlye=2);";
    background : radial-gradient(50% 50%, circle farthest-corner, rgba(44, 166, 224, 1) 0%, rgba(0, 161, 153, 1) 100%);
    filter: progid:DXImageTransform.Microsoft.Alpha(Stlye=2);
}

header > .main {
    display: inline-block;
    vertical-align: top;
    width: 92%;
    height: 100vh;
    background-image: url('main.png');
    background-position: center;
    background-size: 80% auto;
    background-repeat: no-repeat;
}

@media screen and (min-width: 1681px) {
    header > .main {
        background-size: 70% auto;
    }
}

main {
    width: 100%;
    padding: 16px;
    background-color: #62757D;
}

main > article {
    width: 100%;
    max-width: 1000px;
    padding: 1em 5em 1.6em 5em;
    margin: 80px auto 0px auto;
    border-radius: 15px;
    background-color: white;
}

footer {
    width: 100%;
    color: white;
    text-align: center;
    margin-top: 100px;
}

section {
    margin-top: 2.6rem;
}

#banner {
    font-size: 0;
}

#banner > .info {
    display: inline-block;
    width: 50%;
    text-align: center;
    vertical-align: top;
}

#banner > .info > p {
    font-size: 12px;
    display: inline-block;
    margin: 0;
    vertical-align: top;
}

#banner > .info > span {
    font-size: 32px;
    font-weight: bold;
    display: inline-block;
}

.button {
    display: block;
    width: 180px;
    margin: 2vh auto;
    padding: 15px;
    background-color: #009e96;
    border-radius: 10px;
    box-shadow: 2px 2px 4px gray;
    text-decoration: none;
    color: white;
    text-align: center;
    font-size: 36px;
    font-weight: bolder;
    animation-duration: 0.3s;
}

.button:hover {
    background-color: white;
    text-decoration: none;
    color: #009e96;
    animation-duration: 0.3s;
}

